--- a/riffshareiii/parts/exe/plugins/pluginplaceholder.html
+++ b/riffshareiii/parts/exe/plugins/pluginplaceholder.html
@@ -1,1 +1,20 @@
-pluginplaceholder
+<html>
+
+<head>
+	<style>
+		body {
+			background-color: silver;
+		}
+
+		p {
+			text-align: center;
+		}
+	</style>
+</head>
+
+<body>
+	<p>Plugin</p>
+
+</body>
+
+</html>
