--- a/riffshareiii/parts/exe/index.html
+++ b/riffshareiii/parts/exe/index.html
@@ -29,6 +29,7 @@
 	<link rel="stylesheet" type="text/css" href="theme/fanpane.css">
 
 	<link rel="stylesheet" type="text/css" href="theme/colordarkblue.css">
+	<link rel="stylesheet" type="text/css" href="theme/font1small.css">
 
 	<title>ZvoogHub</title>
 </head>
