--- a/riffshareiii/parts/extensions/import_gp/guitartab.html
+++ b/riffshareiii/parts/extensions/import_gp/guitartab.html
@@ -4,7 +4,7 @@
 	<style>
 		html {
 			--color-background: #ffffffcc;
-			(((--main-color))): #003366ff;
+			--main-color: #003366ff;
 			--color-scroll: color-mix(in lab, transparent 90%, var(--main-color));
 
 			font-family: "Bruno Ace", sans-serif;
