--- a/riffshareiii/parts/extensions/zvoogstrum/strumui.html
+++ b/riffshareiii/parts/extensions/zvoogstrum/strumui.html
@@ -2,19 +2,22 @@
 
 <head>
 	<script src="zvoogstrum_plugin.js"></script>
-	<style>
-		body {
-			background-color: silver;
-		}
 
-		p {
-			text-align: center;
-		}
-	</style>
 </head>
 
 <body>
 	<h1>Strumming</h1>
+	<p>mode</p>
+	<p>
+		<select id="modelist">
+			<option value="0">plain</option>
+			<option value="1">pong</option>
+			<option value="2">up</option>
+			<option value="3">down</option>
+			<option value="4">snap</option>
+		</select>
+	</p>
+	<p>names</p>
 	<p>
 		<select id="inslist"></select>
 	</p>
