--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -112,6 +112,7 @@ transform2: scaleX(0.75);
 		<pre id='infopurple'>spurple</pre>
 		<pre id='infored'>sre</pre>
 		<pre id='statred'>red</pre>
+		<pre id='sumstat'></pre>
 	</p>
 	<svg id='svgpane' width="1700" height="2300">
 		<rect width="1300" height="1470" rx="20" ry="20" fill="#ffe" />
