--- a/riffshareiii/parts/exe/index.html
+++ b/riffshareiii/parts/exe/index.html
@@ -38,7 +38,7 @@
 	<div id="pluginActionDiv">
 		<div id="pluginActionHeader">
 			<div id="pluginActionTitle">Action plugin UI</div>
-			<div class="pluginCancel" onclick="globalCommandDispatcher.cancelPluginGUI();">&#xf136;</div>
+			<div class="pluginCancel" onclick="globalCommandDispatcher.actionPluginDialog.closeActionDialogFrame();">&#xf136;</div>
 		</div>
 		<iframe id="pluginActionFrame" class="pluginFrame" src="plugins/pluginplaceholder.html"></iframe>
 	</div>
@@ -59,15 +59,15 @@
 	
 	<div id="pluginSequencerDiv">
 		<div id="pluginSequencerHeader" class='pluginOtherHeader'>
-			<div id="pluginSequencerTitle">Sequencer plugin UI</div>
-			<div class="pluginCancel" onclick="globalCommandDispatcher.cancelPluginGUI();">&#xf136;</div>
+			<div id="pluginSequencerTitle" class='pluginPromptTitle' onclick="globalCommandDispatcher.sequencerPluginDialog.promptSequencerTitle();">&nbsp;&nbsp;Sequencer plugin UI</div>
+			<div class="pluginCancel" onclick="globalCommandDispatcher.sequencerPluginDialog.closeSequencerDialogFrame();">&#xf136;</div>
 		</div>
 		<iframe id="pluginSequencerFrame" class="pluginFrame" src="plugins/pluginplaceholder.html"></iframe>
 		<div id="pluginSequencerBottom" class='pluginBottom'>
-			<div id="pluginSequencerSetPlay" class='pluginDoButton' onclick="globalCommandDispatcher.none();">&#xf3bc;</div>
-			<div id="pluginSequencerSetPasstrough" class='pluginDoButton' onclick="globalCommandDispatcher.none();">&#xf1af;</div>
-			<div id="pluginSequencerSetSolo" class='pluginDoButton' onclick="globalCommandDispatcher.none();">&#xf166;</div>
-			<div id="pluginSequencerDelete" class='pluginDoButton' onclick="globalCommandDispatcher.none();">&#xf154;</div>
+			<div id="pluginSequencerSetPlay" class='pluginDoButton' onclick="globalCommandDispatcher.sequencerPluginDialog.setSequencerOn();">&#xf3bc;</div>
+			<div id="pluginSequencerSetPasstrough" class='pluginDoButton' onclick="globalCommandDispatcher.sequencerPluginDialog.setSequencerMute();">&#xf1af;</div>
+			<div id="pluginSequencerSetSolo" class='pluginDoButton' onclick="globalCommandDispatcher.sequencerPluginDialog.setSequencerSolo();">&#xf166;</div>
+			<div id="pluginSequencerDelete" class='pluginDoButton' onclick="globalCommandDispatcher.sequencerPluginDialog.dropSequencer();">&#xf154;</div>
 		</div>
 	</div>
 	
