--- a/riffshareiii/parts/exe/index.html
+++ b/riffshareiii/parts/exe/index.html
@@ -56,6 +56,17 @@
 			<div id="pluginFilterDelete" class='pluginDoButton' onclick="globalCommandDispatcher.filterPluginDialog.dropFilter();">&#xf154;</div>
 		</div>
 	</div>
+
+	<div id="pluginPointDiv">
+		<div id="pluginPointHeader">
+			<div id="pluginPointTitle">Point plugin UI</div>
+			<div class="pluginCancel" onclick="globalCommandDispatcher.pointPluginDialog.closePointDialogFrame();">&#xf136;</div>
+		</div>
+		<iframe id="pluginPointFrame" class="pluginFrame" src="plugins/pluginplaceholder.html"></iframe>
+		<div id="pluginPointBottom" class='pluginBottom'>
+			<div id="pluginPointDelete" class='pluginDoButton' onclick="globalCommandDispatcher.pointPluginDialog.dropPoint();">&#xf154;</div>
+		</div>
+	</div>
 	
 	<div id="pluginSequencerDiv">
 		<div id="pluginSequencerHeader" class='pluginOtherHeader'>
