--- a/riffshareiii/parts/exe/plugins/performers/zvoog_strum/strumui.html
+++ b/riffshareiii/parts/exe/plugins/performers/zvoog_strum/strumui.html
@@ -21,6 +21,10 @@
 	<p>
 		<select id="inslist"></select>
 	</p>
+	<p>Volume level (0 - 150%)</p>
+	<p>
+		<input type="range" id="voluctrl" name="volume" min="0" max="150" step="5" />
+	</p>
 	<script>
 		initZStrumUI();
 	</script>
