--- a/riffshareiii/parts/extensions/zvoogdrumkit/drmsui.html
+++ b/riffshareiii/parts/extensions/zvoogdrumkit/drmsui.html
@@ -17,6 +17,10 @@
 	<p>
 		<select id="drlist"></select>
 	</p>
+	<p>Volume level (0 - 150%)</p>
+	<p>
+		<input type="range" id="voluctrl" name="volume" min="0" max="150" step="5" />
+	</p>
 	<script>
 		initZDRUI();
 	</script>
