--- a/riffshareiii/parts/extensions/dx7/test.html
+++ b/riffshareiii/parts/extensions/dx7/test.html
@@ -9,7 +9,10 @@
         <input type="file" id="romfile"  />
     </p>
     <p>
-        <button onclick='testPlay();'>test</button>
+        <button onclick='testPlay();'>testPlay</button>
+    </p>
+    <p>
+        <button onclick='testPlay2();'>testPlay2</button>
     </p>
     <script>
         initDX7loader();
