--- a/riffshareiii/parts/exe/plugins/pluginplaceholder.html
+++ b/riffshareiii/parts/exe/plugins/pluginplaceholder.html
@@ -1,19 +1,14 @@
 <html>
 
 <head>
-	<style>
-		body {
-			background-color: silver;
-		}
-
-		p {
-			text-align: center;
-		}
-	</style>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="pluginplaceholder.css">
 </head>
 
 <body>
-	<p>Plugin</p>
+	<h1>Plugin not found</h1>
 
 </body>
 
