--- a/riffshareiii/parts/extensions/minium.percussion/gui/drmsui.html
+++ b/riffshareiii/parts/extensions/minium.percussion/gui/drmsui.html
@@ -16,54 +16,101 @@
 		<input type="range" id="level" min="0" max="100" value="33" />
 	</p>
 	<div class="cntrblk">
-		<ul>
-			<li onclick='console.log("tap");'>Bass Drum 2</li>
-			<li onclick='console.log("tap");'>Bass Drum 1</li>
-			<li onclick='console.log("tap");'>Side Stick/Rimshot</li>
-			<li onclick='console.log("tap");'>Snare Drum 1</li>
-			<li onclick='console.log("tap");'>Hand Clap</li>
-			<li onclick='console.log("tap");'>Snare Drum 2</li>
-			<li onclick='console.log("tap");'>Low Tom 2</li>
-			<li onclick='console.log("tap");'>Closed Hi-hat</li>
-			<li onclick='console.log("tap");'>Low Tom 1</li>
-			<li onclick='console.log("tap");'>Pedal Hi-hat</li>
-			<li onclick='console.log("tap");'>Mid Tom 2</li>
-			<li onclick='console.log("tap");'>Open Hi-hat</li>
-			<li onclick='console.log("tap");'>Mid Tom 1</li>
-			<li onclick='console.log("tap");'>High Tom 2</li>
-			<li onclick='console.log("tap");'>Crash Cymbal 1</li>
-			<li onclick='console.log("tap");'>High Tom 1</li>
-			<li onclick='console.log("tap");'>Ride Cymbal 1</li>
-			<li onclick='console.log("tap");'>Chinese Cymbal</li>
-			<li onclick='console.log("tap");'>Ride Bell</li>
-			<li onclick='console.log("tap");'>Tambourine</li>
-			<li onclick='console.log("tap");'>Splash Cymbal</li>
-			<li onclick='console.log("tap");'>Cowbell</li>
-			<li onclick='console.log("tap");'>Crash Cymbal 2</li>
-			<li onclick='console.log("tap");'>Vibra Slap</li>
-			<li onclick='console.log("tap");'>Ride Cymbal 2</li>
-			<li onclick='console.log("tap");'>High Bongo</li>
-			<li onclick='console.log("tap");'>Low Bongo</li>
-			<li onclick='console.log("tap");'>Mute High Conga</li>
-			<li onclick='console.log("tap");'>Open High Conga</li>
-			<li onclick='console.log("tap");'>Low Conga</li>
-			<li onclick='console.log("tap");'>High Timbale</li>
-			<li onclick='console.log("tap");'>Low Timbale</li>
-			<li onclick='console.log("tap");'>High Agogo</li>
-			<li onclick='console.log("tap");'>Low Agogo</li>
-			<li onclick='console.log("tap");'>Cabasa</li>
-			<li onclick='console.log("tap");'>Maracas</li>
-			<li onclick='console.log("tap");'>Short Whistle</li>
-			<li onclick='console.log("tap");'>Long Whistle</li>
-			<li onclick='console.log("tap");'>Short Guiro</li>
-			<li onclick='console.log("tap");'>Long Guiro</li>
-			<li onclick='console.log("tap");'>Claves</li>
-			<li onclick='console.log("tap");'>High Wood Block</li>
-			<li onclick='console.log("tap");'>Low Wood Block</li>
-			<li onclick='console.log("tap");'>Mute Cuica</li>
-			<li onclick='console.log("tap");'>Open Cuica</li>
-			<li onclick='console.log("tap");'>Mute Triangle</li>
-			<li onclick='console.log("tap");'>Open Triangle</li>
+		<ul id='drumlist'>
+			<li onclick='showDrumList(35);'>Bass Drum 2</li>
+			<ul id='list35'></ul>
+			<li onclick='showDrumList(36);'>Bass Drum 1</li>
+			<ul id='list36'></ul>
+			<li onclick='showDrumList(37);'>Side Stick/Rimshot</li>
+			<ul id='list37'></ul>
+			<li onclick='showDrumList(38);'>Snare Drum 1</li>
+			<ul id='list38'></ul>
+			<li onclick='showDrumList(39);'>Hand Clap</li>
+			<ul id='list39'></ul>
+			<li onclick='showDrumList(40);'>Snare Drum 2</li>
+			<ul id='list40'></ul>
+			<li onclick='showDrumList(41);'>Low Tom 2</li>
+			<ul id='list41'></ul>
+			<li onclick='showDrumList(42);'>Closed Hi-hat</li>
+			<ul id='list42'></ul>
+			<li onclick='showDrumList(43);'>Low Tom 1</li>
+			<ul id='list43'></ul>
+			<li onclick='showDrumList(44);'>Pedal Hi-hat</li>
+			<ul id='list44'></ul>
+			<li onclick='showDrumList(45);'>Mid Tom 2</li>
+			<ul id='list45'></ul>
+			<li onclick='showDrumList(46);'>Open Hi-hat</li>
+			<ul id='list46'></ul>
+			<li onclick='showDrumList(47);'>Mid Tom 1</li>
+			<ul id='list47'></ul>
+			<li onclick='showDrumList(48);'>High Tom 2</li>
+			<ul id='list48'></ul>
+			<li onclick='showDrumList(49);'>Crash Cymbal 1</li>
+			<ul id='list49'></ul>
+			<li onclick='showDrumList(50);'>High Tom 1</li>
+			<ul id='list50'></ul>
+			<li onclick='showDrumList(51);'>Ride Cymbal 1</li>
+			<ul id='list51'></ul>
+			<li onclick='showDrumList(52);'>Chinese Cymbal</li>
+			<ul id='list52'></ul>
+			<li onclick='showDrumList(53);'>Ride Bell</li>
+			<ul id='list53'></ul>
+			<li onclick='showDrumList(54);'>Tambourine</li>
+			<ul id='list54'></ul>
+			<li onclick='showDrumList(55);'>Splash Cymbal</li>
+			<ul id='list55'></ul>
+			<li onclick='showDrumList(56);'>Cowbell</li>
+			<ul id='list56'></ul>
+			<li onclick='showDrumList(57);'>Crash Cymbal 2</li>
+			<ul id='list57'></ul>
+			<li onclick='showDrumList(58);'>Vibra Slap</li>
+			<ul id='list58'></ul>
+			<li onclick='showDrumList(59);'>Ride Cymbal 2</li>
+			<ul id='list59'></ul>
+			<li onclick='showDrumList(60);'>High Bongo</li>
+			<ul id='list60'></ul>
+			<li onclick='showDrumList(61);'>Low Bongo</li>
+			<ul id='list61'></ul>
+			<li onclick='showDrumList(62);'>Mute High Conga</li>
+			<ul id='list52'></ul>
+			<li onclick='showDrumList(63);'>Open High Conga</li>
+			<ul id='list63'></ul>
+			<li onclick='showDrumList(64);'>Low Conga</li>
+			<ul id='list64'></ul>
+			<li onclick='showDrumList(65);'>High Timbale</li>
+			<ul id='list65'></ul>
+			<li onclick='showDrumList(66);'>Low Timbale</li>
+			<ul id='list66'></ul>
+			<li onclick='showDrumList(67);'>High Agogo</li>
+			<ul id='list67'></ul>
+			<li onclick='showDrumList(68);'>Low Agogo</li>
+			<ul id='list68'></ul>
+			<li onclick='showDrumList(69);'>Cabasa</li>
+			<ul id='list69'></ul>
+			<li onclick='showDrumList(70);'>Maracas</li>
+			<ul id='list70'></ul>
+			<li onclick='showDrumList(71);'>Short Whistle</li>
+			<ul id='list71'></ul>
+			<li onclick='showDrumList(72);'>Long Whistle</li>
+			<ul id='list72'></ul>
+			<li onclick='showDrumList(73);'>Short Guiro</li>
+			<ul id='list73'></ul>
+			<li onclick='showDrumList(74);'>Long Guiro</li>
+			<ul id='list74'></ul>
+			<li onclick='showDrumList(75);'>Claves</li>
+			<ul id='list75'></ul>
+			<li onclick='showDrumList(76);'>High Wood Block</li>
+			<ul id='list76'></ul>
+			<li onclick='showDrumList(77);'>Low Wood Block</li>
+			<ul id='list77'></ul>
+			<li onclick='showDrumList(78);'>Mute Cuica</li>
+			<ul id='list78'></ul>
+			<li onclick='showDrumList(79);'>Open Cuica</li>
+			<ul id='list79'></ul>
+			<li onclick='showDrumList(80);'>Mute Triangle</li>
+			<ul id='list80'></ul>
+			<li onclick='showDrumList(81);'>Open Triangle</li>
+			<ul id='list81'></ul>
 		</ul>
 	</div>
 	<p style="visibility: hidden;">▢</p>
