--- a/test/resources/test/test645.html
+++ b/test/resources/test/test645.html
@@ -78,6 +78,7 @@ transform2: scaleX(0.75);
 		<button onclick='toggleFirst();'>first</button>
 		<button onclick='toggleWide();'>wide</button>
 		<button onclick='clickClearLines();'>clear</button>
+		<button onclick='clickToggleMode();'>mode</button>
 		<br />
 		<button onclick='clickGoSkip(-100);'>+100</button>
 		<button onclick='clickGoSkip(-5);'>+5</button>
