--- a/riffshareiii/parts/extensions/minium.audiofile/chooser/pickfile.html
+++ b/riffshareiii/parts/extensions/minium.audiofile/chooser/pickfile.html
@@ -43,7 +43,7 @@
 			<li><a href='javascript:pickerbridge.selectPath("what.ogg");'>what.ogg</a></li>
 			<li><a href='javascript:pickerbridge.selectPath("wowowo.wav");'>wowowo.wav</a></li>
 			<li><a href='javascript:pickerbridge.selectPath("yeah-right.wav");'>yeah-right.wav</a></li>
-			<li><a href='javascript:pickerbridge.selectPath("yo.wav");'></a>yo.wav</a></li>
+			<li><a href='javascript:pickerbridge.selectPath("yo.wav");'>yo.wav</a></li>
 			<li><a href='javascript:pickerbridge.selectPath("zdravstvuite.wav");'>zdravstvuite.wav</a></li>
 		</ul>
 	</div>
