--- a/riffshareiii/parts/extensions/minium.audiofile/chooser/pickfile.html
+++ b/riffshareiii/parts/extensions/minium.audiofile/chooser/pickfile.html
@@ -6,10 +6,11 @@
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Poiret+One&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="plugins.css">
+	<link rel="stylesheet" href="../../../plugins.css">
 </head>
 
 <body>
+
 	<h1>Audio File</h1>
 	<p>Volume <span id='volval'>77</span>%</p>
 	<p>
