--- a/riffshareiii/parts/exe/plugins/actions/miniumeditselection1/mied.html
+++ b/riffshareiii/parts/exe/plugins/actions/miniumeditselection1/mied.html
@@ -16,7 +16,7 @@
 	<p class="cntrblk" id="selectionInfo">Selection: 34-35 bar</p>
 	<p class="cntrblk"><button onclick="plugin.deleteBars();">Delete bars</button></p>
 	<p class="cntrblk"><button onclick="plugin.addBars();">Add empty bars</button></p>
-	<p class="cntrblk"><button onclick="plugin.shiftContent();">Shift content</button></p>
+	<p class="cntrblk"><button onclick="plugin.shiftContent();">Push content aside</button></p>
 	<p class="cntrblk"><button onclick="plugin.promptTempo();">Set tempo</button></p>
 	<p class="cntrblk"><button onclick="plugin.promptMetre();">Set metre</button></p>
 </body>
