--- a/riffshareiii/parts/exe/cleanup.html
+++ b/riffshareiii/parts/exe/cleanup.html
@@ -16,7 +16,7 @@
 <body>
 	<h1>Warning!</h1>
 	<p><button onclick='clearstore();'>Clear</button></p>
-	<p><a href='index.html'>Minium.studio</a></p>
+	<p><a href='minium.studio.html'>Minium.studio</a></p>
 	<script>
 		function clearstore() {
 			console.log('cleaning...');
