--- a/riffshareiii/parts/exe/minium.studio.html
+++ b/riffshareiii/parts/exe/minium.studio.html
@@ -120,7 +120,7 @@
 		</div>
 	-->
 		<svg id="tileLevelSVG" viewBox="0 0 100 100" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1">
-
+			<!-- css -->
 			<linearGradient id="verticalBorderLine">
 				<stop class="verLineFrom" offset="0%" />
 				<stop class="verLineMiddle" offset="10%" />
