--- a/riffshareiii/parts/exe/plugins/actions/alphatabimport1/ui.html
+++ b/riffshareiii/parts/exe/plugins/actions/alphatabimport1/ui.html
@@ -12,7 +12,7 @@
 </head>
 
 <body>
-	<h1>Alpha Tab import</h1>
+	<h1>*.gp3, gp4, gp5, gpx, gp, mxl, musicxml</h1>
     <p><input type="file" id="file_at_input" onchange="plugin.loadMusicfile(this);" /></p>
 	<p class="cntrblk">
 		<button onclick='plugin.sendImportedMusicData();'>Send</button>
