--- a/riffshareiii/parts/exe/plugins/actions/alphatabimport1/ui.html
+++ b/riffshareiii/parts/exe/plugins/actions/alphatabimport1/ui.html
@@ -13,7 +13,7 @@
 
 <body>
 	<h1>*.gp3, gp4, gp5, gpx, gp, mxl, musicxml</h1>
-    <p><input type="file" id="file_at_input" onchange="plugin.loadMusicfile(this);" /></p>
+    <p><input type="file" id="file_at_input" onchange="plugin.loadMusicfile(this);" accept=".gp3, .gp4, .gp5, .gpx, .gp, .mxl, .musicxml"  /></p>
 	<p class="cntrblk">
 		<button onclick='plugin.sendImportedMusicData();'>Send</button>
 	</p>
